--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <script src="js/moment.js"></script>
 
       <!-- include our bootstrap companion style sheet -->
-      <link rel="stylesheet" type="text/css" href="css/style.css" />
+      <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
 
       <title>Local-eyes</title>
     </head>
@@ -65,7 +65,7 @@
         <header
           class="row border-bottom  align-items-center justify-content-between"
         >
-          <div class="col-10 mr-auto p-4">
+          <div class="col-10 mr-auto p-4 header">
             <h1>Local-Eyes Header Area</h1>
           </div>
           <div class="col-2 text-right p-4">
@@ -113,6 +113,7 @@
       </div>
 
       <!-- our javascript -->
+      <script src="assets/javascript/app.js"></script>
       <script src="js/main.js"></script>
       <script src="js/login.js"></script>
     </body>
