--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 
       <!-- moment.js reference -->
-      <script src="js/moment.js"></script>
+    <!--script src="js/moment.js"--></script>
 
       <!-- include our bootstrap companion style sheet -->
       <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
@@ -113,9 +113,10 @@
       </div>
 
       <!-- our javascript -->
+
+      <script src="assets/javascript/main.js"></script>
+      <script src="assets/javascript/login.js"></script>
       <script src="assets/javascript/app.js"></script>
-      <script src="js/main.js"></script>
-      <script src="js/login.js"></script>
     </body>
   </html>
 </html>
