--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
         crossorigin="anonymous"
       ></script>
 
+      <!--D3 cdn-->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
+
       <!-- Initialize Firebase -->
       <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 
       <!-- moment.js reference -->
-    <!--script src="js/moment.js"--></script>
+      <!--script src="js/moment.js"-->
 
       <!-- include our bootstrap companion style sheet -->
       <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
@@ -112,11 +115,80 @@
         </footer>
       </div>
 
+      <div class="container border my-4 bg-white">
+        <header
+          class="row border-bottom header_bg align-items-start position-relative"
+        >
+          <div class="mr-auto p-2">
+            <h1>LocalEyes</h1>
+          </div>
+          <div id="search_div">
+            <form class="d-inline-block">
+              <label for="zip_code_search">Zip Code: </label>
+              <input id="zip_code_search" type="text" maxlength="5" />
+              <button id="submit_zip" type="submit">Submit</button>
+            </form>
+          </div>
+        </header>
+
+        <div id="results_row" class="row p-4 d-none">
+          <!-- info about this zip code -->
+          <div id="zip_info" class="card m-2 d-none" style="max-width: 25rem;">
+            <div class="card-header">
+              Zip Code Info
+            </div>
+            <div id="zip_card" class="card-body"></div>
+          </div>
+          <!-- current weather forecast (next 4 hours) -->
+          <div
+            id="weather_info"
+            class="card m-2 d-none"
+            style="max-width: 25rem;"
+          >
+            <div class="card-header">
+              Current Weather
+            </div>
+            <div id="weather_card" class="card-body"></div>
+          </div>
+          <!-- census info -->
+          <div
+            id="census_info"
+            class="card m-2 d-none"
+            style="max-width: 25rem;"
+          >
+            <div class="card-header">
+              Census.gov Info
+            </div>
+            <div id="census_card" class="card-body"></div>
+          </div>
+          <!-- census info -->
+          <div
+            id="census_avg_info"
+            class="card m-2 d-none"
+            style="max-width: 25rem;"
+          >
+            <div class="card-header">
+              Census.gov Avg
+            </div>
+            <div id="census_avg_card" class="card-body"></div>
+          </div>
+        </div>
+
+        <footer class="row border-top">
+          <div
+            class="col-sm-12 p-2 d-flex align-items-center justify-content-center"
+          >
+            <span class="small">Copyright &#169; 2019 mike14747</span>
+          </div>
+        </footer>
+      </div>
+
       <!-- our javascript -->
 
       <script src="assets/javascript/main.js"></script>
       <script src="assets/javascript/login.js"></script>
       <script src="assets/javascript/app.js"></script>
+      <script src="assets/javascript/info.js"></script>
     </body>
   </html>
 </html>
